--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/dzamora1/Friend-Finder/issues"
   },
-  "homepage": "https://github.com/dzamora1/Friend-Finder#readme"
+  "homepage": "https://github.com/dzamora1/Friend-Finder#readme",
+  "dependencies": {
+    "express": "^4.16.3"
+  }
 }
